<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/splash"
                android:gravity="center">

    <!-- Name Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/min_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:layout_marginLeft="@dimen/medium_size"
        android:layout_marginRight="@dimen/medium_size"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginTop="@dimen/min_size"
        android:gravity="center">

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="textCapWords"
            android:textColor="@color/black"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameLayout"
        android:layout_marginBottom="@dimen/min_size"
        android:layout_marginEnd="@dimen/medium_size"
        android:layout_marginLeft="@dimen/medium_size"
        android:layout_marginRight="@dimen/medium_size"
        android:layout_marginStart="@dimen/medium_size"
        android:layout_marginTop="@dimen/min_size">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@color/black"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login"
        style="@style/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/medium_size"
        android:background="@color/colorPrimary"
        android:text="@string/login"/>
</RelativeLayout>